# aupi-django-boilerplate

./: .gitignore  Makefile  README.md  docker-compose-dev.yml  env.template  pyproject.toml
app/app/: settings.py  urls.py
